# TRTC_Android

TRTC-API-Example/: .gitignore  build.gradle
TRTC-API-Example/Advanced/JoinMultipleRoom/: build.gradle
TRTC-API-Example/Advanced/SetAudioQuality/: build.gradle
TRTC-API-Example/Advanced/SpeedTest/: build.gradle
TRTC-API-Example/Advanced/ThirdBeauty/: build.gradle
TRTC-API-Example/App/: build.gradle
TRTC-API-Example/Basic/AudioCall/: CMakeLists.txt  build.gradle
TRTC-API-Example/Basic/AudioCall/src/main/cpp/: CMakeLists.txt  CustomerCryptJNI.cpp
TRTC-API-Example/Basic/AudioCall/src/main/cpp/include/openssl/: asn1.h  e_os2.h
TRTC-API-Example/Basic/AudioCall/src/main/java/com/tencent/trtc/audiocall/: AudioCallingActivity.java  JavaCallCpp.java
TRTC-API-Example/Basic/VideoCall/: build.gradle
TRTC-API-Example/Basic/VoiceChatRoom/: build.gradle
TRTC-API-Example/Common/: build.gradle
TRTC-API-Example/Debug/src/main/java/com/tencent/trtc/debug/: GenerateTestUserSig.java
TRTC-API-Example/gradle/wrapper/: gradle-wrapper.properties
